# WSDProjekt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  print.cpp
data/english/: english_random_topic.txt  pg100.txt  pg2600.txt  pg500.txt
data/german/: german_random_topic.txt
hdr/: print.h
include/: Markov.h  Math.h
old/: MarkovClass.h  initMarkovMatrix.cpp
src/: Markov.cpp  initMarkovMatrix.cpp  main.cpp  math.cpp  print.cpp
